--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,3 +1,7 @@
+body {
+margin:0;
+}
+
 .container-contacts {
   display: flex;
   flex-direction: row;
@@ -48,6 +52,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
+
 }
 
 .links-container {
